# UR3e_ROS_Trajectory_Simulator

./: .gitignore  README.md
python_scripts/: custom_trajectory.csv  custom_trajectory_generator.py  lissajous_trajectory_generator.py
ws3/src/msee22_description/: CMakeLists.txt  package.xml
ws3/src/msee22_description/launch/: move_robot.launch.py  view_room.launch.py
ws3/src/py_joint_pub/: package.xml  setup.py
ws3/src/py_joint_pub/py_joint_pub/: joint_publisher_csv.py
ws3/src/py_joint_pub/resource/: custom_trajectory.csv
ws3/src/table_description/: CMakeLists.txt  package.xml
ws3/src/table_description/launch/: view_table.launch.py
ws3/src/wall_description/: CMakeLists.txt  package.xml
ws3/src/wall_description/launch/: view_wall.launch.py
